--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
-POSTGRES_USER=pet_user
-POSTGRES_PASSWORD=pet_user
-POSTGRES_DB=pet_db
+POSTGRES_USER=admin
+POSTGRES_PASSWORD=admin
+POSTGRES_DB=petstore
 POSTGRES_PORT=5432
 POSTGRES_HOST=localhost
