--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,27 @@
 version: '3.1'
 
 services:
-
+  api:
+    build:
+      context: .
+      dockerfile: docker/api/Dockerfile
+    container_name: api
+    tty: true
+    ports:
+      - 8080:8080
+    volumes:
+      - ./:/app
+    depends_on:
+      - db
+    env_file: .env
   db:
     build:
       context: .
-      dockerfile: docker/db/Dockerfile
     image: postgres:16
     container_name: petstore_db
     restart: always
     ports:
-      - 5432:5432
+      - "5432:5432"
     volumes:
       - ./internal/api/db/migration:/docker-entrypoint-initdb.d
     environment:
