--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,10 +5,10 @@ services:
     build:
       context: .
       dockerfile: docker/api/Dockerfile
-    container_name: api
+    container_name: petstore_api
     tty: true
     ports:
-      - 8080:8080
+      - "8080:8080"
     volumes:
       - ./:/app
     depends_on:
@@ -21,7 +21,7 @@ services:
     container_name: petstore_db
     restart: always
     ports:
-      - "5432:5432"
+      - "5431:5432"
     volumes:
       - ./internal/api/db/migration:/docker-entrypoint-initdb.d
     environment:
