--- a/.env.example
+++ b/.env.example
@@ -2,4 +2,4 @@ POSTGRES_USER=admin
 POSTGRES_PASSWORD=admin
 POSTGRES_DB=petstore
 POSTGRES_PORT=5432
-POSTGRES_HOST=localhost
+POSTGRES_HOST=petstore_db
